# pgllogumlog

./: .gitignore  CLAUDE.md  COMPREHENSIVE_TEST_STRATEGY_REPORT.md  CORE_LOGIC.md  DELIVERY_SUMMARY.txt  DESIGNER1_PLAN.md  DESIGNER2_PLAN.md  DESIGNER3_PLAN.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  ORCHESTRATOR_FINAL_REPORT.md  PRODUCTION_READINESS_AUDIT.md  QA_TEST_FIX_REPORT.md  QUICK_REFERENCE_AI_READINESS_SCORE.txt  README_TESTING_STRATEGY.md  REFACTORING_SPECIFICATION.md  REPLIT_ARCH_SPEC.json  SEMANTIC_RELEVANCE_FIXES_IMPLEMENTATION_REPORT.md  TEST_STRATEGY_VISUAL_GUIDE.md  TEST_SUITE_VALIDATION_REPORT.md  designer1_prompt.txt  designer2_prompt.txt  designer3_prompt.txt
workflow_system/: .env.example  .gitignore  BLOCKER_SPECS.md  CODEBASE_ANALYSIS.md  PRODUCT_STRATEGY_REPORT.md  SEMANTIC_RELEVANCE_FUTURE_WORK.md  TDD_TEST_ARCHITECTURE.md  TECHNICAL_DEBT.md  analyze_failures.py  authorize_gmail.py  authorize_sheets.py  claude_md_option2_orchestrator.md  clean_restart.bat  debug_research.py  kill_servers.py  main.py  pyproject.toml  qa_failure_analysis.txt  read_qa_log.py  requirements.txt  restart_server.bat  run_end_to_end_test.py  run_qa_test.py  run_test.py  run_workflow_analysis.py  setup_smtp.py  simple_validation_test.py  test_5x3_complete.py  test_budget_20_prompts.py  test_budget_3_prompts_sc3.py  test_budget_5_prompts.py  test_compass_value.py  test_premium_20_prompts.py  test_rag_orchestrator.py  test_report_upgraded.html  test_report_with_citations.html  test_sc_call_count_validation.py  test_standard_20_prompts.py  test_synthesis.py  (+3 more)
(+170 files in other folders)
